[gd_scene load_steps=5 format=3 uid="uid://q5yg8a38pmiu"]

[ext_resource type="Script" path="res://Scenes/Objects/Bulleets/bulletalpha.gd" id="1_cqqqr"]
[ext_resource type="Texture2D" uid="uid://de6drgvekx5xm" path="res://Sprite Assets/bullets/bulletredorange.png" id="2_o462y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ximwe"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pwf4"]
size = Vector2(10, 10)

[node name="Ship1Bullet1" type="RigidBody2D"]
position = Vector2(-4, -4)
script = ExtResource("1_cqqqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_ximwe")

[node name="DeathTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_7pwf4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, 4)
texture = ExtResource("2_o462y")

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
